# ntutbox-course

./: .gitignore  CLAUDE.md  README.md
110-1/: catalog.ndjson  classes.json
110-2/: catalog.ndjson  classes.json
111-1/: catalog.ndjson  classes.json
111-2/: catalog.ndjson  classes.json
112-1/: catalog.ndjson  classes.json
112-2/: catalog.ndjson  classes.json
crawler/: README.md  models.py  pyproject.toml
crawler/ntut_catalog/: __init__.py  __main__.py  artifacts.py  classes_builder.py  cli.py  client.py  detail.py  migrate.py  normalize.py  orchestrator.py  parse_course_table.py  parse_detail.py  parse_program.py  parse_subj.py  periods.py  programs.py  pua.py  pua_scan.py  rederive.py  rematric.py  reprocess.py  requirement_legend.py
crawler/tests/: _fakes.py  conftest.py  test_artifacts.py  test_classes_builder.py  test_cli.py  test_client.py  test_detail.py  test_matric.py  test_migrate.py  test_models_mprogram.py  test_normalize.py  test_orchestrator.py  test_parse_course_table.py  test_parse_detail.py  test_parse_program.py  test_parse_subj.py  test_periods.py  test_programs.py  test_pua.py  test_pua_scan.py  test_publish.py  test_rederive.py  test_redline.py  test_reprocess.py  test_requirement_legend.py
crawler/tests/fixtures/: cprog_-2_115.html  cprog_-3_115_7.html  cprog_-4_mprogram_av2.html  cprog_-4_mprogram_avf.html  cprog_-4_sample.html  curr_2B04001.html  mprogram_AV9.html  mprogram_list_115-1.html  qc_114-1_5zhuan_all.html  qc_114-1_csie_day.html  querycurrpage_tw.html  subj_-2_114-1.html  subj_-3_114-1_59.html  syllabus_360748.html
(+280 files in other folders)
